--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,6 +1,6 @@
 .home {
   width: 100%;
-  height: calc(100vh - 60px);
+  min-height: calc(100vh - 60px);
   background-image: url(../img/concert1.jpg);
   background-position: top left;
   background-repeat: no-repeat;
@@ -33,10 +33,16 @@
   width: 100%;
   height: 1px;
 }
+.home .content {
+  display: flex;
+}
 
 /* RESPONSIVE */
 @media screen and (max-width: 800px) {
   .home {
     animation-duration: 400s;
+  }
+  .home .content {
+    flex-direction: column-reverse;
   }
 }
