--- a/src/style/playlist-title.css
+++ b/src/style/playlist-title.css
@@ -1,20 +1,21 @@
 .title-item {
   box-sizing: border-box;
   width: 100%;
+  height: 100%;
   display: flex;
   padding: 0 10px;
 }
 
 .title-item img {
-  height: 8vmin;
+  height: 80%;
   max-width: 80%;
   object-fit: contain;
 }
 .title-item p {
-  height: 10vmin;
+  height: 100%;
   display: flex;
   align-items: center;
-  font-size: max(1.3vw, 11px);
+  font-size: max(1.5vw, 12px);
   text-shadow: 1px 1px 5px white;
 }
 
