--- a/src/style/playlist.css
+++ b/src/style/playlist.css
@@ -1,6 +1,6 @@
 .playlist {
   width: 50%;
-  height: 50vmin;
+  height: max(50vmin, 400px);
   margin-left: 5%;
   margin-top: 10vmin;
   /* background-color: rgb(150, 150, 150, 0.5); */
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   border-radius: 5px;
 }
 .playlist h1 {
@@ -16,23 +15,60 @@
   font-size: 2.5vw;
   margin: 5% 0;
 }
-.playlist .items {
+.playlist .songs-container {
   width: 90%;
-  height: 80%;
-  overflow-y: scroll;
-  border: 3px solid black;
+  height: 100px;
+  /* overflow-y: scroll; */
   margin-bottom: 10px;
+  /**/
+  position: relative;
+  perspective: 1000px;
 }
-.playlist .song:nth-child(2n) {
+.playlist .songs-carousel {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 100%;
+  left: 0px;
+  /* transform: translateZ(-87px) rotateX(0deg); */
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+.playlist .song {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  border: 2px solid black;
+  background-color: rgba(221, 208, 147, 0.94);
+}
+.playlist .song:nth-child(1) {
+  transform: rotateX(0deg) translateZ(100px);
+}
+.playlist .song:nth-child(2) {
+  transform: rotateX(60deg) translateZ(100px);
+}
+.playlist .song:nth-child(3) {
+  transform: rotateX(120deg) translateZ(100px);
+}
+.playlist .song:nth-child(4) {
+  transform: rotateX(180deg) translateZ(100px);
+}
+.playlist .song:nth-child(5) {
+  transform: rotateX(240deg) translateZ(100px);
+}
+.playlist .song:nth-child(6) {
+  transform: rotateX(300deg) translateZ(100px);
+}
+
+/* .playlist .song:nth-child(2n) {
   background-color: rgba(153, 81, 81, 0.5);
 }
 .playlist .song:nth-child(2n + 1) {
   background-color: rgba(171, 33, 33, 0.5);
-}
+} */
 
-.song:hover {
+.playlist .song:hover {
   cursor: pointer;
-  border: 2px solid rgb(249, 106, 106);
 }
 
 @media screen and (max-width: 800px) {
