--- a/src/style/playlist.css
+++ b/src/style/playlist.css
@@ -1,19 +1,22 @@
 .playlist {
   width: 50%;
-  height: max(50vmin, 400px);
+  height: max(50vmin, 450px);
   margin-left: 5%;
   margin-top: 10vmin;
   /* background-color: rgb(150, 150, 150, 0.5); */
-  background-color: rgb(180, 180, 180, 0.8);
+  /* background-color: rgb(180, 180, 180, 0.8); */
+  background-image: url(../img/brushed-alum.png);
+
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
+  position: relative;
 }
 .playlist h1 {
   font-family: "Dancing Script", sans-serif;
   font-size: 2.5vw;
-  margin: 5% 0;
+  margin-top: 5%;
 }
 .playlist .songs-container {
   width: 90%;
@@ -39,7 +42,8 @@
   width: 100%;
   height: 100px;
   border: 2px solid black;
-  background-color: rgba(221, 208, 147, 0.94);
+  background-color: rgba(188, 184, 167, 0.94);
+  background-image: url(../img/brushed-alum.png);
 }
 .playlist .song:nth-child(1) {
   transform: rotateX(0deg) translateZ(100px);
@@ -60,20 +64,51 @@
   transform: rotateX(300deg) translateZ(100px);
 }
 
-/* .playlist .song:nth-child(2n) {
-  background-color: rgba(153, 81, 81, 0.5);
-}
-.playlist .song:nth-child(2n + 1) {
-  background-color: rgba(171, 33, 33, 0.5);
-} */
-
 .playlist .song:hover {
   cursor: pointer;
+}
+
+.playlist .control {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+}
+.playlist .control button {
+  border: none;
+  font-size: 20px;
+  margin: 0 20px;
+}
+.playlist .control .round {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.playlist .control .rectangle {
+  width: 150px;
+  height: 50px;
+  border-radius: 5px;
 }
 
 @media screen and (max-width: 800px) {
   .playlist {
     width: 80%;
     margin: 1vmin auto;
+  }
+}
+@media screen and (max-width: 480px) {
+  .playlist .control .round {
+    width: 30px;
+    height: 30px;
+  }
+  .playlist .control .rectangle {
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+  }
+  .playlist .control button {
+    font-size: 14px;
   }
 }
