--- a/src/style/playlist-title.css
+++ b/src/style/playlist-title.css
@@ -3,17 +3,47 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: row;
   padding: 0 10px;
+  position: relative;
 }
-
+.title-item .boulon {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  object-fit: contain;
+  position: absolute;
+  box-shadow: 0px 0px 5px black;
+}
+.title-item .boulon.number1 {
+  top: 5px;
+  left: 5px;
+}
+.title-item .boulon.number2 {
+  top: 5px;
+  right: 5px;
+}
+.title-item .boulon.number3 {
+  bottom: 5px;
+  left: 5px;
+}
+.title-item .boulon.number4 {
+  bottom: 5px;
+  right: 5px;
+}
+.title-item .content {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
 .title-item img {
   height: 80%;
   max-width: 80%;
   object-fit: contain;
 }
 .title-item p {
-  height: 100%;
   display: flex;
+  height: 100%;
   align-items: center;
   font-size: max(1.5vw, 12px);
   text-shadow: 1px 1px 5px white;
