--- a/src/style/playlist.css
+++ b/src/style/playlist.css
@@ -1,17 +1,14 @@
 .playlist {
   width: 50%;
-  height: max(50vmin, 450px);
+  min-height: 400px;
   margin-left: 5%;
   margin-top: 10vmin;
-  /* background-color: rgb(150, 150, 150, 0.5); */
-  /* background-color: rgb(180, 180, 180, 0.8); */
   background-image: url(../img/brushed-alum.png);
-
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
-  position: relative;
+  position: relative; /* for control buttons position */
 }
 .playlist h1 {
   font-family: "Dancing Script", sans-serif;
@@ -20,20 +17,17 @@
 }
 .playlist .songs-container {
   width: 90%;
-  height: 100px;
-  /* overflow-y: scroll; */
+  /*height is defined in JSX*/
   margin-bottom: 10px;
-  /**/
   position: relative;
   perspective: 1000px;
 }
 .playlist .songs-carousel {
   width: 100%;
-  height: 100%;
+  height: 100px;
   position: absolute;
-  top: 100%;
+  top: calc(50% - 50px);
   left: 0px;
-  /* transform: translateZ(-87px) rotateX(0deg); */
   transform-style: preserve-3d;
   transition: transform 1s;
 }
@@ -42,26 +36,7 @@
   width: 100%;
   height: 100px;
   border: 2px solid black;
-  background-color: rgba(188, 184, 167, 0.94);
-  background-image: url(../img/brushed-alum.png);
-}
-.playlist .song:nth-child(1) {
-  transform: rotateX(0deg) translateZ(100px);
-}
-.playlist .song:nth-child(2) {
-  transform: rotateX(60deg) translateZ(100px);
-}
-.playlist .song:nth-child(3) {
-  transform: rotateX(120deg) translateZ(100px);
-}
-.playlist .song:nth-child(4) {
-  transform: rotateX(180deg) translateZ(100px);
-}
-.playlist .song:nth-child(5) {
-  transform: rotateX(240deg) translateZ(100px);
-}
-.playlist .song:nth-child(6) {
-  transform: rotateX(300deg) translateZ(100px);
+  background-image: url(../img/metal-texture.gif);
 }
 
 .playlist .song:hover {
@@ -69,8 +44,7 @@
 }
 
 .playlist .control {
-  position: absolute;
-  bottom: 0;
+  margin-top: 20px;
   width: 100%;
   height: 80px;
   display: flex;
@@ -95,7 +69,7 @@
 @media screen and (max-width: 800px) {
   .playlist {
     width: 80%;
-    margin: 1vmin auto;
+    margin: 0 auto;
   }
 }
 @media screen and (max-width: 480px) {
