--- a/src/style/playlist.css
+++ b/src/style/playlist.css
@@ -2,7 +2,7 @@
   width: 50%;
   min-height: 400px;
   margin-left: 5%;
-  margin-top: 10vmin;
+  margin-top: 25px;
   background-image: url(../img/brushed-alum.png);
   display: flex;
   flex-direction: column;
@@ -12,7 +12,7 @@
 }
 .playlist h1 {
   font-family: "Dancing Script", sans-serif;
-  font-size: 2.5vw;
+  font-size: max(2.5vw, 18px);
   margin-top: 5%;
 }
 .playlist .songs-container {
