--- a/src/style/player.css
+++ b/src/style/player.css
@@ -8,6 +8,28 @@
   border: 2px solid rgb(109, 42, 42);
   border-radius: 10px;
 }
+.player .player-head.onplay p {
+  color: brown;
+  text-shadow: 2px 2px 10px red, 5px 5px 15px white;
+  animation: text-blink 1s infinite ease-in-out alternate-reverse;
+}
+@keyframes text-blink {
+  0%,
+  30% {
+    color: brown;
+    text-shadow: 2px 2px 10px red, 5px 5px 15px white;
+  }
+  50%,
+  55% {
+    color: black;
+    text-shadow: none;
+  }
+  60%,
+  100% {
+    color: brown;
+    text-shadow: 2px 2px 10px red, 5px 5px 15px white;
+  }
+}
 .player .audio-player {
   background-color: rgba(0, 255, 255, 0.5);
   background-image: url(../img/brushed-alum.png);
