--- a/src/style/playlist-title.css
+++ b/src/style/playlist-title.css
@@ -54,11 +54,25 @@
 }
 .title-item p:nth-child(2) {
   padding: 0 3%;
-  width: 40%;
+  width: 35%;
   font-style: italic;
 }
-.title-item p:nth-child(3) {
+.title-item p:nth-child(4) {
   width: 40%;
   justify-content: center;
   font-weight: bold;
+}
+.title-item .led {
+  width: 10px;
+  height: 10px;
+  margin-top: 45px;
+}
+.title-item .led.on {
+  width: 10px;
+  height: 10px;
+  margin-top: 45px;
+  border-radius: 50%;
+  border: 1px solid rgb(131, 128, 128);
+  background-color: red;
+  box-shadow: 0px 0px 15px 5px red;
 }
