--- a/src/style/player.css
+++ b/src/style/player.css
@@ -8,7 +8,8 @@
   border: 2px solid rgb(109, 42, 42);
   border-radius: 10px;
 }
-.player .player-head.onplay p {
+.player .player-head.onplay p,
+.player .player-head.onplay .title-title {
   color: brown;
   text-shadow: 2px 2px 10px red, 5px 5px 15px white;
   animation: text-blink 1s infinite ease-in-out alternate-reverse;
