--- a/src/style/playlist-title.css
+++ b/src/style/playlist-title.css
@@ -63,8 +63,11 @@
 .title-item .title-content .title-authors-content {
   position: absolute;
   height: 100%;
+  top: 20%;
+}
+.title-item .title-content .title-authors-content.front {
   top: 0;
-  animation: text-scroll 5s infinite alternate-reverse linear;
+  animation: text-scroll 5s infinite alternate linear;
 }
 @keyframes text-scroll {
   from {
